# ArgentumOnline-Taller

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  generate_map.py  install.sh  installer.sh  pre-commit-config.yaml  precommit_out.txt  uninstall.sh  uninstaller.sh
client/: CMakeLists.txt
client/maps/: defaultMap.json
client/resources/: default.json
client/src/: CharacterAnimator.cpp  CharacterSprites.cpp  CharacterSprites.h  ChatCommandParser.cpp  ChatCommandParser.h  Client.cpp  Client.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  HealthBar.cpp  Launcher.cpp  Launcher.h  MiniChat.cpp  MiniChat.h  Receiver.cpp  Sender.cpp  Sender.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h  main.cpp
client/src/animation/: CharacterAnimator.cpp  CharacterAnimator.h  CharacterSprites.cpp  CharacterSprites.h  Death.cpp  Death.h  FxAnimator.cpp  FxAnimator.h  Motion.cpp  Motion.h  ProjectileAnimator.cpp  ProjectileAnimator.h
client/src/core/: Client.cpp  Client.h  Game.cpp  Game.h  Targeting.cpp  Targeting.h  main.cpp
client/src/core/common/: FxType.h  GameConstants.h  SoundEffect.h  WeaponHelper.h
client/src/core/rendering/: EquipmentVisualRegistry.cpp  EquipmentVisualRegistry.h
client/src/core/systems/: AudioSystem.cpp  AudioSystem.h  CameraSystem.cpp  CameraSystem.h  EntityRenderer.cpp  EntityRenderer.h  FxSystem.cpp  FxSystem.h  InputProcessor.cpp  InputProcessor.h  StateAudioTrigger.cpp  StateAudioTrigger.h  WorldRenderer.cpp  WorldRenderer.h
client/src/input/: ChatCommandParser.cpp  ChatCommandParser.h  EventHandler.cpp  EventHandler.h  NpcPolicy.h
client/src/network/: Receiver.cpp  Receiver.h  Sender.cpp
client/src/rendering/: BuildingFronts.cpp  BuildingFronts.h  IndoorRegions.cpp  IndoorRegions.h  NpcVisuals.h  TallFlora.cpp  TallFlora.h  TextureManager.cpp  TextureManager.h  TileDraw.h  TileMap.cpp  TileMap.h
client/src/ui/: CharacterCreationScreen.cpp  CharacterCreationScreen.h  GroundItemLabel.h  HealthBar.h  HudLayout.cpp  HudLayout.h  HudPanel.cpp  HudPanel.h  ItemIcons.cpp  ItemIcons.h  Launcher.cpp  Launcher.h  ManualPanel.cpp  ManualPanel.h  MiniChat.cpp  MiniChat.h  QuitView.cpp  QuitView.h  Window.cpp  Window.h
client/ui/: launcher.ui
common/: foo.cpp  (+1 more)
editor/: BeachStamp.cpp  BeachStamp.h  BitmapFont.cpp  BitmapFont.h  BlockBrush.cpp  BlockBrush.h  CMakeLists.txt  Camera.cpp  Camera.h  CatalogSprites.cpp  CatalogSprites.h  CharRect.h  CityStamp.cpp  CityStamp.h  DesertStamp.cpp  DesertStamp.h  DungeonStamp.cpp  DungeonStamp.h  Editor.cpp  Editor.h  EditorLayout.cpp  EditorLayout.h  EditorMap.cpp  EditorMap.h  Font.cpp  Font.h  ForestStamp.cpp  ForestStamp.h  GoldPrompt.cpp  GoldPrompt.h  MainScreenEditor.cpp  MapBuilder.cpp  MapChooser.cpp  MapChooser.h  MapDefaults.h  MapRenderer.cpp  MapRenderer.h  Palette.cpp  Palette.h  ScreenEditor.cpp  (+8 more)
server/: CMakeLists.txt
server/include/: FormulaEngine.cpp  FormulaEngine.h  LootResolver.cpp  LootResolver.h
server/include/model/: FormulaEngine.h  ServerEvents.h
server/src/: Acceptor.cpp  Acceptor.h  ClientHandler.cpp  ClientHandler.h  ConnectionMonitor.cpp  ConnectionMonitor.h  GameLoop.cpp  GameLoop.h  GameMonitor.cpp  GameMonitor.h  Map.cpp  Map.h  Match.cpp  Match.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  Server.cpp  Server.h  World.cpp  World.h  main.cpp
server/src/auth/: AuthManager.cpp  AuthManager.h
server/src/config/: ArmorConfigLoader.cpp  ArmorConfigLoader.h  CharacterConfig.h  CharacterConfigLoader.cpp  CharacterConfigLoader.h  InventoryConfig.h  InventoryConfigLoader.cpp  InventoryConfigLoader.h  ItemConfigLoader.cpp  ItemConfigLoader.h  MonsterConfig.h  MonsterConfigLoader.cpp  MonsterConfigLoader.h  NpcStockLoader.h  ServerConfigLoader.cpp  ServerConfigLoader.h  TomlConfigHelper.h
server/src/model/: FormulaEngine.cpp
server/src/model/clan/: Clan.h  ClanController.cpp  ClanController.h  ClanManager.cpp  ClanManager.h  ClanRepository.cpp  ClanRepository.h  ClanService.cpp  ClanService.h  IWorldContext.h
server/src/model/combat/: AttackParams.h  AttackStrategy.h  CombatManager.cpp  CombatManager.h  MagicStrategy.h  MeleeStrategy.h  RangedStrategy.h
server/src/model/commands/: BankerCommands.h  MerchantCommands.h  NPCCommand.h  PriestCommands.h
server/src/model/components/: BankComponent.cpp  BankComponent.h  EquipmentComponent.cpp  EquipmentComponent.h  InventoryComponent.cpp  InventoryComponent.h  RegenerationComponent.cpp  RegenerationComponent.h  StateComponent.h  StatsComponent.cpp  StatsComponent.h
server/src/model/entities/: Banker.cpp  Banker.h  Citizen.cpp  Citizen.h  EntityManager.cpp  EntityManager.h  GlobalBank.h  Merchant.cpp  Merchant.h  Monster.cpp  Monster.h  MonsterFactory.cpp  MonsterFactory.h  NPCFactory.h  Player.cpp  Player.h  PlayerFactory.h  PlayerMock.cpp  PlayerMock.h  Priest.cpp  Priest.h  Projectile.cpp  Projectile.h  banker.h  citizen.cpp  citizen.h  monster.cpp  monster.h  player.cpp  player.h  priest.h
server/src/model/events/: EventPublisher.cpp  EventPublisher.h
server/src/persistence/: PlayerDataStore.cpp  PlayerDataStore.h  WorldDataStore.cpp  WorldDataStore.h  WorldPersistData.h
tests/: CMakeLists.txt  TestAuthManager.cpp  TestBank.cpp  TestBanker.cpp  TestBeachPrefab.cpp  TestBeachStamp.cpp  TestBitmapFont.cpp  TestBlockBrush.cpp  TestBuildingFronts.cpp  TestCamera.cpp  TestCatalogSprites.cpp  TestCharacterAnimator.cpp  TestCharacterSprites.cpp  TestCityPrefab.cpp  TestCityStamp.cpp  TestClan.cpp  TestCombat.cpp  TestCombatSystem.cpp  TestConstantRateLoop.cpp  TestConsumable.cpp  TestDeath.cpp  TestDesertPrefab.cpp  TestDesertStamp.cpp  TestDungeonPrefab.cpp  TestDungeonStamp.cpp  TestEditorLayout.cpp  TestEditorMap.cpp  TestEntityCollision.cpp  TestEntityManager.cpp  TestEquipmentComponent.cpp  TestForestPrefab.cpp  TestForestStamp.cpp  TestFxAnimator.cpp  TestGameLoop.cpp  TestGlobalBank.cpp  TestGoldPrompt.cpp  TestGroundItemLabel.cpp  TestGroundItemLayer.cpp  TestHealthBar.cpp  TestHelpers.cpp  (+34 more)
(+171 files in other folders)
